# MCLauncher

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/launcher-core/: Cargo.toml
crates/launcher-core/examples/: host.rs  mcauth.rs  packs.rs  play.rs  smoke.rs  tools.rs
crates/launcher-core/src/: account.rs  assets.rs  auth.rs  backup.rs  download.rs  epic.rs  error.rs  http.rs  install.rs  java.rs  launch.rs  lib.rs  manifest.rs  modloader.rs  modpacks.rs  modrinth.rs  paths.rs  platform.rs  progress.rs  server.rs  steam.rs  util.rs  version.rs
crates/launcher-core/src/games/: cyberpunk.rs  eldenring.rs  install.rs  mod.rs  skyrim.rs
crates/launcher-desktop/: index.html  package-lock.json  package.json  vite.config.ts
crates/launcher-desktop/src/: App.tsx  main.tsx  store.tsx
crates/launcher-desktop/src-tauri/: Cargo.toml  tauri.conf.json
crates/launcher-desktop/src-tauri/capabilities/: default.json
crates/launcher-desktop/src-tauri/icons/: icon.icns
crates/launcher-desktop/src-tauri/src/: commands.rs  content.rs  discord.rs  firewall.rs  instances.rs  inventory.rs  main.rs  netshare.rs  nexus.rs  progress.rs  secrets.rs  settings.rs  state.rs  stats.rs  trainer.rs  vpn.rs
crates/launcher-desktop/src/components/: AccessModal.tsx  AccountMenu.tsx  BackupsModal.tsx  ConfigEditor.tsx  ContentPanel.tsx  CrashModal.tsx  GamePanels.tsx  InventoryEditor.tsx  MinecraftPanels.tsx  MotdEditor.tsx  NetworkPanel.tsx  Onboarding.tsx  ServerConsole.tsx  SystemPanels.tsx  ui.tsx
crates/launcher-desktop/src/lib/: api.ts  mcdata.ts  skins.ts  types.ts
crates/launcher-desktop/src/styles/: global.css
crates/launcher-gui/: Cargo.toml
crates/launcher-gui/src/: main.rs  settings.rs  shared.rs  tasks.rs
