[package]
name = "launcher-core"
description = "UI-agnostic core for the Minecraft launcher: manifests, downloads, Java, auth, and launch."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
zip.workspace = true
sevenz-rust.workspace = true
flate2.workspace = true
tar.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs.workspace = true
url.workspace = true

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
