[package]
name = "launcher-gui"
description = "iced front-end for the Minecraft launcher."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "mclauncher"
path = "src/main.rs"

[dependencies]
launcher-core.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
iced = { version = "0.13", features = ["tokio", "image", "svg"] }
