[package]
name = "launcher-desktop"
description = "Aurora Launcher — multi-game desktop launcher (Tauri)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "aurora-launcher"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
launcher-core.workspace = true
reqwest.workspace = true
base64.workspace = true
flate2.workspace = true
discord-rich-presence.workspace = true
open = "5"
sysinfo = "0.32"
fastnbt = "2"

# Elden Ring trainer (live memory patching) — Windows only.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_Memory",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Diagnostics_ToolHelp",
] }

[features]
# Enable Tauri's custom-protocol in release (used by the bundler).
custom-protocol = ["tauri/custom-protocol"]
